tree-sitter/corpus/basic.txt
==================
Basic Package
==================

vibe main

---

(source_file
  (package_clause
    (identifier)))

==================
Import Statement
==================

vibe main

yeet "fmt"

---

(source_file
  (package_clause
    (identifier))
  (import_declaration
    (import_spec
      (string_literal))))

==================
Multiple Imports
==================

vibe main

yeet (
  "fmt"
  tea "strings"
)

---

(source_file
  (package_clause
    (identifier))
  (import_declaration
    (import_spec
      (string_literal))
    (import_spec
      (identifier)
      (string_literal))))

==================
Function Declaration
==================

vibe main

slay main() {
  yolo
}

---

(source_file
  (package_clause
    (identifier))
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (return_statement))))

==================
Types and Variables
==================

vibe main

be_like Person squad {
  name tea
  age normie
}

sus x normie = 10
sus name tea = "John"

facts PI = 3.14

---

(source_file
  (package_clause
    (identifier))
  (type_declaration
    (type_spec
      (identifier)
      (struct_type
        (field_declaration
          (identifier_list
            (identifier))
          (type_name))
        (field_declaration
          (identifier_list
            (identifier))
          (type_name)))))
  (variable_declaration
    (var_spec
      (identifier_list
        (identifier))
      (type_name)
      (expression_list
        (expression
          (primary_expression
            (operand
              (literal
                (int_literal))))))))
  (variable_declaration
    (var_spec
      (identifier_list
        (identifier))
      (type_name)
      (expression_list
        (expression
          (primary_expression
            (operand
              (literal
                (string_literal))))))))
  (constant_declaration
    (const_spec
      (identifier_list
        (identifier))
      (expression_list
        (expression
          (primary_expression
            (operand
              (literal
                (float_literal))))))))))
