tree-sitter/corpus/control_flow.txt
==================
If Statement
==================

vibe main

slay test(x normie) {
  lowkey x > 0 {
    yolo x
  } highkey lowkey x < 0 {
    yolo -x
  } highkey {
    yolo 0
  }
}

---

(source_file
  (package_clause
    (identifier))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier)
        (type_name)))
    (block
      (if_statement
        (expression
          (binary_expression
            (expression
              (primary_expression
                (operand
                  (identifier))))
            (expression
              (primary_expression
                (operand
                  (literal
                    (int_literal)))))))
        (block
          (return_statement
            (expression_list
              (expression
                (primary_expression
                  (operand
                    (identifier)))))))
        (if_statement
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (operand
                    (identifier))))
              (expression
                (primary_expression
                  (operand
                    (literal
                      (int_literal)))))))
          (block
            (return_statement
              (expression_list
                (expression
                  (unary_expression
                    (expression
                      (primary_expression
                        (operand
                          (identifier)))))))))
          (block
            (return_statement
              (expression_list
                (expression
                  (primary_expression
                    (operand
                      (literal
                        (int_literal)))))))))))))))

==================
For Loop
==================

vibe main

slay printNumbers(n normie) {
  bestie i := 0; i < n; i++ {
    fmt.Println(i)
  }
}

---

(source_file
  (package_clause
    (identifier))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier)
        (type_name)))
    (block
      (for_statement
        (for_clause
          (short_var_declaration
            (identifier_list
              (identifier))
            (expression_list
              (expression
                (primary_expression
                  (operand
                    (literal
                      (int_literal)))))))
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (operand
                    (identifier))))
              (expression
                (primary_expression
                  (operand
                    (identifier))))))
          (inc_dec_statement
            (expression
              (primary_expression
                (operand
                  (identifier))))))
        (block
          (expression_statement
            (expression
              (primary_expression
                (call_expression
                  (expression
                    (primary_expression
                      (selector_expression
                        (expression
                          (primary_expression
                            (operand
                              (identifier))))
                        (identifier))))
                  (arguments
                    (expression_list
                      (expression
                        (primary_expression
                          (operand
                            (identifier))))))))))))))))))

==================
While Loop
==================

vibe main

slay countdown(n normie) {
  periodt n > 0 {
    fmt.Println(n)
    n--
  }
}

---

(source_file
  (package_clause
    (identifier))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier)
        (type_name)))
    (block
      (while_statement
        (expression
          (binary_expression
            (expression
              (primary_expression
                (operand
                  (identifier))))
            (expression
              (primary_expression
                (operand
                  (literal
                    (int_literal)))))))
        (block
          (expression_statement
            (expression
              (primary_expression
                (call_expression
                  (expression
                    (primary_expression
                      (selector_expression
                        (expression
                          (primary_expression
                            (operand
                              (identifier))))
                        (identifier))))
                  (arguments
                    (expression_list
                      (expression
                        (primary_expression
                          (operand
                            (identifier))))))))))
          (inc_dec_statement
            (expression
              (primary_expression
                (operand
                  (identifier))))))))))))))

==================
Switch Statement
==================

vibe main

slay describeFruit(fruit tea) {
  vibe_check fruit {
    mood "apple":
      yolo "Round and juicy"
    mood "banana":
      yolo "Yellow and sweet"
    basic:
      yolo "Unknown fruit"
  }
}

---

(source_file
  (package_clause
    (identifier))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter_declaration
        (identifier)
        (type_name)))
    (block
      (switch_statement
        (expression_switch_statement
          (expression
            (primary_expression
              (operand
                (identifier))))
          (expression_case_clause
            (expression_switch_case
              (expression_list
                (expression
                  (primary_expression
                    (operand
                      (literal
                        (string_literal)))))))
            (return_statement
              (expression_list
                (expression
                  (primary_expression
                    (operand
                      (literal
                        (string_literal))))))))
          (expression_case_clause
            (expression_switch_case
              (expression_list
                (expression
                  (primary_expression
                    (operand
                      (literal
                        (string_literal)))))))
            (return_statement
              (expression_list
                (expression
                  (primary_expression
                    (operand
                      (literal
                        (string_literal))))))))
          (expression_case_clause
            (expression_switch_case)
            (return_statement
              (expression_list
                (expression
                  (primary_expression
                    (operand
                      (literal
                        (string_literal))))))))))))))))))
